<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout_height="wrap_content"
        app:title="@string/performance">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="use_antialiasing"
            app:title="@string/use_antialiasing" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="every_second"
            app:title="@string/every_second" />

        <SeekBarPreference
            android:max="20"
            app:defaultValue="12"
            app:key="max_iters"
            app:min="5"
            app:showSeekBarValue="true"
            app:title="@string/max_iters" />

        <SeekBarPreference
            android:max="200"
            app:defaultValue="60"
            app:key="fps"
            app:min="5"
            app:showSeekBarValue="true"
            app:title="@string/fps" />
        <SeekBarPreference
            android:max="300"
            app:defaultValue="50"
            app:key="scaling_factor"
            app:min="1"
            app:showSeekBarValue="true"
            app:summary="@string/summary_scaling_factor"
            app:title="@string/scaling_factor" />

    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/look">

        <SwitchPreferenceCompat
            app:key="draw_clock"
            app:title="@string/draw_clock"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="draw_branches"
            app:title="@string/draw_branches"
            app:defaultValue="true"/>
        <SwitchPreferenceCompat
            app:key="use_tick"
            app:title="@string/use_tick"
            app:defaultValue="false"/>
        <ListPreference
            app:defaultValue="1"
            app:entries="@array/clock_type_entries"
            app:entryValues="@array/clock_type_values"
            app:key="clock_type"
            app:title="@string/clock_type"
            app:useSimpleSummaryProvider="true" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue = "@color/colorClock"
            android:key = "color_clock"
            android:title = "@string/color_clock"
            app:cpv_showAlphaSlider = "true"
            app:cpv_dialogType = "custom"
            app:cpv_allowPresets = "false"/>

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue = "@color/colorBackground"
            android:key = "color_background"
            android:title = "@string/color_background"
            app:cpv_showAlphaSlider = "false"
            app:cpv_dialogType = "custom"
            app:cpv_allowPresets = "false"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/legal">
        <Preference
            app:title="@string/license"
            app:key="license"/>
    </PreferenceCategory>

</PreferenceScreen>